tests/baselines/reference/overloadOnConstantsInvalidOverload1.errors.txt
tests/cases/compiler/overloadOnConstantsInvalidOverload1.ts(6,10): error TS2382: Specialized overload signature is not assignable to any non-specialized signature.
tests/cases/compiler/overloadOnConstantsInvalidOverload1.ts(7,10): error TS2381: A signature with an implementation cannot use a string literal type.


==== tests/cases/compiler/overloadOnConstantsInvalidOverload1.ts (2 errors) ====
    class Base { foo() { } }
    class Derived1 extends Base { bar() { } }
    class Derived2 extends Base { baz() { } }
    class Derived3 extends Base { biz() { } }
    
    function foo(name: "SPAN"): Derived1;
             ~~~
!!! error TS2382: Specialized overload signature is not assignable to any non-specialized signature.
    function foo(name: "DIV"): Derived2 {
             ~~~
!!! error TS2381: A signature with an implementation cannot use a string literal type.
        return null;
    }
    
    foo("HI");